hphp/hack/test/typecheck/naming_fail_test9.php.exp
File "naming_fail_test9.php", line 9, characters 10-11:
The variable $e is defined (Naming[2007])
File "naming_fail_test9.php", line 7, characters 25-26:
But in a different scope
