hphp/hack/test/typecheck/naming_fail_test9.php
<?hh

class FooException extends Exception {}

function f() {
  try {
  } catch (FooException $e) {
  } catch (Exception $_) {
    echo $e;
  }
}
